@@ -149,6 +149,22 @@ name|Progressable
 import|;
 end_import
 
+begin_import
+import|import
+name|org
+operator|.
+name|apache
+operator|.
+name|hadoop
+operator|.
+name|hbase
+operator|.
+name|ipc
+operator|.
+name|HBaseRPCProtocolVersion
+import|;
+end_import
+
 begin_comment
 comment|/**  * RegionServer which maintains secondary indexes.  *   **/
 end_comment
@@ -209,6 +225,55 @@ argument_list|,
 name|conf
 argument_list|)
 expr_stmt|;
+block|}
+annotation|@
+name|Override
+specifier|public
+name|long
+name|getProtocolVersion
+parameter_list|(
+specifier|final
+name|String
+name|protocol
+parameter_list|,
+specifier|final
+name|long
+name|clientVersion
+parameter_list|)
+throws|throws
+name|IOException
+block|{
+if|if
+condition|(
+name|protocol
+operator|.
+name|equals
+argument_list|(
+name|IndexedRegionInterface
+operator|.
+name|class
+operator|.
+name|getName
+argument_list|()
+argument_list|)
+condition|)
+block|{
+return|return
+name|HBaseRPCProtocolVersion
+operator|.
+name|versionID
+return|;
+block|}
+return|return
+name|super
+operator|.
+name|getProtocolVersion
+argument_list|(
+name|protocol
+argument_list|,
+name|clientVersion
+argument_list|)
+return|;
 block|}
 annotation|@
 name|Override
